--- a/style.css
+++ b/style.css
@@ -40,13 +40,20 @@ p {
   font-size: 20px;
 }
 
-input {
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+
+input {  
   padding: 10px;
   border-radius: 5px;
 }
 
 button {
-  width: 150px;
+  width: fit-content;
+  margin-top: 10px;
   padding: 10px;
   background: #865a0e;
   border: none;
@@ -62,4 +69,25 @@ button:hover {
   color: crimson;
 }
 
+.inputTeamsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* place-items: center; */
+  margin-top: 10px;
+  padding: 10px;
+  background: #0b6328;
+}
 
+.divInputTeam {
+  display: flex;
+  flex-direction: row;
+}
+
+.divInputTeam p {
+  margin-right: 10px;
+}
+
+/* .btnPutTeams {
+  display: none;
+} */
